fixed spacing

--- a/website/assets/css/style.scss
+++ b/website/assets/css/style.scss
@@ -1,6 +1,5 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
-load_paths: /usr/local/bundle/gems/jekyll-theme-primer-0.6.0/_sass
 ---
 
 @import
@@ -13,46 +12,46 @@ load_paths: /usr/local/bundle/gems/jekyll-theme-primer-0.6.0/_sass
 ===========================
 */
   /* Dropdown Button */
-  .dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-  }
+.dropbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
 
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
 
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 190px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 190px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
 
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
 
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
 
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {display: block;}
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
 
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
 
 
 /*
@@ -116,30 +115,30 @@ load_paths: /usr/local/bundle/gems/jekyll-theme-primer-0.6.0/_sass
 
 
 .image-gallery {
+  width: 100%;
+  display: grid;
+  columns: 200px 3;
+  grid-template-columns: repeat(auto-fill, 250px);
+  justify-content: center;
+  padding: 0px;
+}
+
+// repeat(auto-fill,minmax(200px, 1fr))
+
+.box {
+    flex-basis: 25%;
     width: 100%;
-    display: grid;
-    columns: 200px 3;
-    grid-template-columns: repeat(auto-fill, 250px);
-    justify-content: center;
-    padding: 0px;
-  }
-
-  // repeat(auto-fill,minmax(200px, 1fr))
-
-  .box {
-      flex-basis: 25%;
-      width: 100%;
-      padding: 10px;
-      margin: 2px;
-  }
+    padding: 10px;
+    margin: 2px;
+}
 
 .img-gallery {
-	width: 100%;
-  height: 200px;
-	object-fit: cover;
-  transform: scale(1);
-  transition: all 0.5s ease-in-out;
-  &:hover {
-    transform: scale(1.05);
-  }
+width: 100%;
+height: 200px;
+object-fit: cover;
+transform: scale(1);
+transition: all 0.5s ease-in-out;
+&:hover {
+  transform: scale(1.05);
+}
 }
